# atlantis-emu

./: .codespellrc  .git-blame-ignore-revs  .gitattributes  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  vcpkg.json
.ci/: atlantis-mainline-step1.yml  atlantis-mainline-step2.yml  atlantis-patreon-step1.yml  atlantis-patreon-step2.yml  atlantis-repo-sync.yml  atlantis-verify.yml
.ci/templates/: build-mock.yml  build-msvc.yml  build-single.yml  build-standard.yml  build-testing.yml  format-check.yml  merge-private.yml  merge.yml  mergebot-private.yml  mergebot.yml  release-download.yml  release-github.yml  release-private-tag.yml  release-universal.yml  retrieve-artifact-source.yml  retrieve-master-source.yml  sync-source.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: android-build.yml  android-ea-play-release.yml  android-mainline-play-release.yml  android-merge.js  android-publish.yml  ci.yml  codespell.yml  verify.yml
.reuse/: dep5
CMakeModules/: CopyatlantisFFmpegDeps.cmake  CopyatlantisQt5Deps.cmake  CopyatlantisSDLDeps.cmake  DownloadExternals.cmake  FindLLVM.cmake  FindOpus.cmake  Findgamemode.cmake  Findlz4.cmake  Findzstd.cmake  GenerateSCMRev.cmake  MSVCCache.cmake  MinGWClangCross.cmake  WindowsCopyFiles.cmake
hooks/: pre-commit
src/: CMakeLists.txt
src/android/: .gitignore  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  (+1 more)
src/dedicated_room/: CMakeLists.txt  atlantis_room.cpp  atlantis_room.rc
tools/: reset-submodules.sh
(+2715 files in other folders)
